# eyelang

./: .gitignore  Cargo.toml  LICENSE  README.md  bla.eye  clippy.toml  errors.out  example.eye  flake.nix  generics.eye  llvm  test-project.eye  test.eye  test.py  tmp.eye  tmp_.eye
.cargo/: config.toml
crates/compiler/: Cargo.toml
crates/compiler/src/: error.rs  eval.rs  helpers.rs  layout.rs  lib.rs  link.rs  modules.rs  segment_list.rs  types.rs
crates/compiler/src/check/: call.rs  cast.rs  closure.rs  exhaust.rs  expr.rs  lval.rs  mod.rs  pattern.rs  traits.rs  type_def.rs
crates/compiler/src/compiler/: builtins.rs  display.rs  mod.rs
crates/compiler/src/error/: mod.rs
crates/compiler/src/hir/: display.rs  mod.rs
crates/compiler/src/irgen/: const_value.rs  entry_point.rs  intrinsics.rs  mod.rs  types.rs
crates/compiler/src/parser/: lexer.rs  mod.rs  parse.rs  reader.rs  token.rs  tokenize.rs
crates/compiler/src/parser/ast/: mod.rs  repr.rs
crates/compiler/src/types/: display.rs  intern.rs  mod.rs  unify.rs
crates/compiler/src/typing/: display.rs  mod.rs  unify.rs
crates/dmap/: Cargo.toml
crates/dmap/src/: lib.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs  span.rs
crates/eye/: Cargo.toml
crates/eye-lsp/: Cargo.toml
crates/eye-lsp/src/: lib.rs  lsp.rs
crates/eye-lsp/src/lsp/: find_in_ast.rs  handlers.rs  mod.rs
crates/eye-lsp/src/lsp/handlers/: complete.rs  hover.rs  mod.rs
crates/eye-lsp/src/types/: mod.rs  notification.rs  request.rs
crates/eye-query/: Cargo.toml
crates/eye-query/src/: check.rs  eval.rs  irgen.rs  main.rs  type_table.rs
crates/eye-query/src/check/: exhaust.rs
crates/eye-query/src/compiler/: mod.rs
crates/eye-query/src/error/: mod.rs
crates/eye-query/src/hir/: mod.rs
crates/eye-query/src/parser/: lexer.rs  mod.rs  reader.rs  token.rs
crates/eye-query/src/parser/ast/: mod.rs  repr.rs
crates/eye-query/std/: main.eye
crates/eye/src/: args.rs  eval.rs  fmt_command.rs  irgen.rs  link.rs  main.rs  std_path.rs  type_table.rs
crates/eye/src/check/: cast.rs  exhaust.rs  expr.rs  lval.rs  mod.rs  pattern.rs
crates/eye/src/compiler/: builtins.rs  mod.rs
crates/eye/src/error/: mod.rs
crates/eye/src/hir/: mod.rs
crates/eye/src/irgen/: const_value.rs  entry_point.rs  mod.rs  types.rs
crates/eye/src/parser/: lexer.rs  mod.rs  token.rs
crates/eye/src/parser/ast/: mod.rs  repr.rs
crates/eye/src/types/: mod.rs  traits.rs  unify.rs
crates/eyelang-old/: Cargo.toml
crates/eyelang-old/src/: compile.rs  error.rs  lexer.rs  main.rs  span.rs
crates/format/: Cargo.toml
crates/format/src/: convert.rs  dom.rs  lib.rs  main.rs  render.rs
crates/format/tests/: tree_maintained.rs
crates/id/: Cargo.toml
crates/ir/: Cargo.toml
crates/ir-backend-fast/: Cargo.toml
crates/ir-backend-llvm/: Cargo.toml
crates/ir-backend-x86/: Cargo.toml
crates/ir2/: Cargo.toml
crates/parser/: Cargo.toml
crates/segment-list/: Cargo.toml
crates/span/: Cargo.toml
crates/token/: Cargo.toml
crates/types/: Cargo.toml
eye/: array.eye  basic.eye  basic.out  calculator.eye  casts.eye  complex_generics.eye  early_return.eye  early_return.out  errors.eye  errors.out  fib.eye  generic_func.out  generic_uninhabited.eye  generic_uninhabited.out  generics.eye  generics.out  heap.eye  heap.out  ideas.eye  infer.eye  infer.out  llvm.eye  match.eye  match.out  methods.eye  methods.out  mutable_methods.eye  mutable_methods.out  never.eye  never.out  operators.eye  operators.out  pointers.eye  return_3.eye  return_3.out  structs.eye  sum_types.eye  sum_types.out  test.eye  test.out  (+6 more)
eye-derive/: Cargo.toml
eye-derive/src/: lib.rs
eye-query/: Cargo.toml  test-project.eye
eye-query/src/: eval.rs  main.rs  type_table.rs
eye/examples/: calculator.eye  calculator.in  calculator.out  fib.eye  fib.out  project.out
eye/features/: array.eye  array.out  casts.eye  casts.out  closures.eye  closures.out  constants.eye  constants.out  enum_infer.eye  enum_infer.out  enums.eye  enums.out  globals.eye  globals.out  pointers.eye  pointers.out
eye/generics/: complex_generics.eye  complex_generics.out  generic_func.eye  generics.eye  generics.out  method_generics.eye  method_generics.out
eye/project/: main.eye  other.eye
eye/std_tests/: iterators.eye  iterators.out  list.eye  list.out  map.eye  map.out  queue.eye  queue.out
eye/traits/: basic.eye  basic.out  fn_trait.eye  fn_trait.out  generic_fn_fn.eye  generic_fn_fn.out.disabled  generic_impl.eye  generic_impl.out  generic_trait_inference.eye  generic_trait_inference.out  impl_selection.eye  impl_selection.out  return_overload.eye  return_overload.out  trait_on_empty_struct.eye  trait_on_empty_struct.out
eyelang-fuzzer/: Cargo.toml
eyelang-fuzzer/src/: main.rs
help/: help.c
help/linux/: entry.s
project/: file.eye  main.eye
src/: compile.rs  dmap.rs  error.rs  help.rs  interpreter.rs  ir.rs  irgen.rs  lexer.rs  link.rs  main.rs  parser.rs  token.rs  typecheck.rs  types.rs
src/ast/: mod.rs  repr.rs
src/backend/: mod.rs  x86.rs  x86_64.rs
src/codegen/: mod.rs
src/error/: mod.rs
src/interpreter/: mod.rs
src/ir/: builder.rs  const_val.rs  display.rs  eval.rs  exhaust.rs  gen.rs  instruction.rs  mod.rs  types.rs  typing.rs
src/irgen/: call.rs  const_eval.rs  const_val.rs  expr.rs  main_func.rs  mod.rs  pat.rs
src/irgen2/: const_val.rs  main_func.rs  mod.rs
src/irgen_old/: call.rs  expr.rs  pat.rs
src/lexer/: mod.rs  tokens.rs
src/llvm_codegen/: backend.rs  mod.rs
src/lsp/: dispatch.rs  handlers.rs  mod.rs  validate.rs
src/parser/: mod.rs  reader.rs  tokens.rs
src/resolve/: const_val.rs  consts.rs  cross_resolve.rs  exhaust.rs  expr.rs  mod.rs  pat.rs  scope.rs  std_builtins.rs  trait_impls.rs  type_info.rs  types.rs
src/types/: layout.rs  mod.rs
src/typing/: mod.rs  tir.rs
src/verifier/: mod.rs
std/: c.eye  call.eye  file.eye  hash.eye  int.eye  intrinsics.eye  iter.eye  list.eye  main.eye  option.eye  prelude.eye  primitive.eye  queue.eye  result.eye  string.eye
testing/: expected_output.txt  output.txt  run_examples  test
(+153 files in other folders)
