[workspace]

members = [
    "crates/eye",
    "crates/compiler",
    "crates/span",
    "crates/types",
    "crates/id",
    "crates/dmap",
    "crates/ir",
    "crates/ir2",
    "crates/eye-lsp",
    "crates/ir-backend-llvm",
    "crates/ir-backend-x86",
]
default-members = ["crates/eye"]

resolver = "2"
