[workspace]

members = [
    "crates/eye",
    "crates/compiler",
    "crates/id",
    "crates/dmap",
    "crates/ir",
    "crates/eye-lsp",
    "crates/ir-backend-llvm",
    "crates/ir-backend-fast",
    "crates/parser",
    "crates/error",
    "crates/token",
    "crates/format",
    "crates/segment-list",
]
default-members = ["crates/eye"]

resolver = "2"

[workspace.dependencies]
compiler.path = "crates/compiler"
id.path = "crates/id"
dmap.path = "crates/dmap"
ir.path = "crates/ir"
error.path = "crates/error"
parser.path = "crates/parser"
token.path = "crates/token"
format.path = "crates/format"
segment-list.path = "crates/segment-list"

pathdiff = "0.2.1"
tracing = { version = "0.1.41", default-features = false, features = ["release_max_level_off"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-error.version = "0.2.1"
color-format = { git = "https://github.com/LinusDikomey/color-format" }
