[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
dmap = { path = "../dmap" }
span = { path = "../span" }
types = { path = "../types" }
id = { path = "../id" }
color-format = { git = "https://github.com/LinusDikomey/color-format" }
ir = { path = "../ir" }
pathdiff = "0.2.1"
indexmap = "2.7.0"
