[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
parser.workspace = true
dmap.workspace = true
span.workspace = true
types.workspace = true
error.workspace = true
id.workspace = true
color-format.workspace = true
ir.workspace = true
tracing.workspace = true

pathdiff = "0.2.1"
indexmap = "2.7.0"
