[package]
name = "eye-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmap = { path = "../dmap" }
span = { path = "../span" }
types = { path = "../types" }
id = { path = "../id" }
color-format = { git = "https://github.com/LinusDikomey/color-format" }
ir = { version = "0.1.0", path = "../ir" }

