[package]
name = "eye"
version = "0.1.0"
edition = "2024"

[features]
default = [
  "llvm-backend",
  "fast-backend",
]
llvm-backend = ["dep:ir-backend-llvm"]
fast-backend = ["dep:ir-backend-fast"]
lsp = ["dep:eye-lsp"]

[dependencies]
compiler = { path = "../compiler" }
color-format = { git = "https://github.com/LinusDikomey/color-format" }
clap = { version = "4.4.13", features = ["derive"] }
eye-lsp = { path = "../eye-lsp", optional = true }
ir = { path = "../ir" }
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# backends
ir-backend-llvm = { path = "../ir-backend-llvm", optional = true }
ir-backend-fast = { path = "../ir-backend-fast", optional = true }
pathdiff = "0.2.1"
