[package]
name = "eye"
version = "0.1.0"
edition = "2024"

[features]
default = [
  "llvm-backend",
  "fast-backend",
]
llvm-backend = ["dep:ir-backend-llvm"]
fast-backend = ["dep:ir-backend-fast"]
lsp = ["dep:eye-lsp"]

[dependencies]
compiler.workspace = true
color-format.workspace = true
ir.workspace = true
tracing.workspace = true
error.workspace = true

clap = { version = "4.4.13", features = ["derive"] }
eye-lsp = { path = "../eye-lsp", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
pathdiff = "0.2.1"

# backends
ir-backend-llvm = { path = "../ir-backend-llvm", optional = true }
ir-backend-fast = { path = "../ir-backend-fast", optional = true }
