[package]
name = "eye"
version = "0.1.0"
edition = "2024"

[features]
default = [
  "llvm-backend",
  "fast-backend",
]
llvm-backend = ["dep:ir-backend-llvm"]
fast-backend = ["dep:ir-backend-fast"]
lsp = ["dep:eye-lsp"]

[dependencies]
compiler.workspace = true
ir.workspace = true
error.workspace = true
format.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
color-format.workspace = true

clap = { version = "4.4.13", features = ["derive"] }
eye-lsp = { path = "../eye-lsp", optional = true }
pathdiff = "0.2.1"
diff = "0.1.13"

# backends
ir-backend-llvm = { path = "../ir-backend-llvm", optional = true }
ir-backend-fast = { path = "../ir-backend-fast", optional = true }
